--- a/index.html
+++ b/index.html
@@ -93,6 +93,46 @@
                 
             </div>
         </div>
+
+        <div class="my-specializations">
+            <h2 class="tittle-of-section">Czym się zajmuje</h2>
+            <div class="specs-flex-box1-2">
+                <div class="spec-box spec-box-flex">
+                    <h3>Projektuje strony internetowe</h3>
+                    <p>Tworzenie potencjalnego wyglądu danej strony internetowej przy użyciu aplikacji</p>
+                    <img src="./img/calculations1.svg" alt="Projektowanie stron internetowych">
+                </div>
+                <div class="spec-box spec-box-flex">
+                    <h3>Programuje strony internetowe</h3>
+                    <p>Pisanie stron internetowych za pomocą technologi: HTML, CSS, Javascript oraz PHP</p>
+                    <img src="./img/code1.svg" alt="Programowanie stron internetowych">
+                </div>
+            </div>
+            <div class="spec-box">
+                <h3>Optymalizuje strony pod responsywne wyświetlanie (RWD)</h3>
+                <p>Prawidłowe wyświetlanie strony na każdym urządzeniu</p>
+                <img src="./img/responsive1.svg" alt="Responsywne wyświetlanie stron internetowych">
+            </div>
+            <div class="spec-box">
+                <h3>Poprawiam wyniki wyszukiwania SEO</h3>
+                <p>Zwiększanie widoczności stron internetowych w wynikach wyszukiwania google</p>
+                <img src="./img/designbump1.svg" alt="Poprawianie wyników wyszukiwania SEO">
+            </div>
+
+            <div class="spec-tools">
+                <div class="tools-content">
+                    <div class="tools-type-flex">
+                        <div class="programming-tools">
+                            <p>Narzędzia do Programowania</p>
+                        </div>
+                        <div class="designing-tools">
+                            <p>Narzedzia do Designu</p>
+                        </div>
+                        <div class="active-tool"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
