--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="my-specializations">
             <h2 class="tittle-of-section">Czym się zajmuje</h2>
-            <div class="specs-flex-box1-2">
+            <div class="specs-flex-box1-and2">
                 <div class="spec-box spec-box-flex">
                     <h3>Projektuje strony internetowe</h3>
                     <p>Tworzenie potencjalnego wyglądu danej strony internetowej przy użyciu aplikacji</p>
@@ -119,20 +119,24 @@
                 <img src="./img/designbump1.svg" alt="Poprawianie wyników wyszukiwania SEO">
             </div>
 
+            
             <div class="spec-tools">
                 <div class="tools-content">
                     <div class="tools-type-flex">
+                        <div class="active-tool"></div>
                         <div class="programming-tools">
                             <p>Narzędzia do Programowania</p>
                         </div>
                         <div class="designing-tools">
                             <p>Narzedzia do Designu</p>
                         </div>
-                        <div class="active-tool"></div>
                     </div>
                 </div>
             </div>
         </div>
+
+
+        <div class="short-contact"></div>
     </div>
     
 </body>
