--- a/index.html
+++ b/index.html
@@ -125,11 +125,51 @@
                     <div class="tools-type-flex">
                         <div class="active-tool"></div>
                         <div class="programming-tools">
-                            <p>Narzędzia do Programowania</p>
+                            <p>Narzędzia do
+                                <br>
+                                Programowania
+                            </p>
                         </div>
                         <div class="designing-tools">
                             <p>Narzedzia do Designu</p>
                         </div>
+                    </div>
+                    <div class="my-tools-main">
+                        <div class="my-tools-programming">
+                            <div class="tool">
+                                <img src="./img/HTML5.svg" alt="HTML 5">
+                                <p>Html 5</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/CSS.svg" alt="Css 3">
+                                <p>Css 3</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/JS.svg" alt="Javascript">
+                                <p>Javascript</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/VS.svg" alt="Visual Studio Code">
+                                <p>VS Code</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/github.svg" alt="Github">
+                                <p>Github</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/BOOTSTRAP5.svg" alt="Bootstrap">
+                                <p>Bootstrap</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/GANALYTICS.svg" alt="Google Analytics">
+                                <p>Google Analytics</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/PHP.svg" alt="PHP">
+                                <p>PHP</p>
+                            </div>
+                        </div>
+                        <div class="my-tools-designing"></div>
                     </div>
                 </div>
             </div>
