--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <p>VS Code</p>
                             </div>
                             <div class="tool">
-                                <img src="./img/github.svg" alt="Github">
+                                <img src="./img/GITHUB-Circle.svg" alt="Github">
                                 <p>Github</p>
                             </div>
                             <div class="tool">
@@ -161,7 +161,7 @@
                                 <p>Bootstrap</p>
                             </div>
                             <div class="tool">
-                                <img src="./img/GANALYTICS.svg" alt="Google Analytics">
+                                <img src="./img/xyz.svg" alt="Google Analytics">
                                 <p>Google Analytics</p>
                             </div>
                             <div class="tool">
@@ -169,14 +169,55 @@
                                 <p>PHP</p>
                             </div>
                         </div>
-                        <div class="my-tools-designing"></div>
+                        <div class="my-tools-designing">
+                            <div class="tool">
+                                <img src="./img/FIGMA.svg" alt="Figma">
+                                <p>Figma</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/AI.svg" alt="Adobe illustrator">
+                                <p>Adobe illustrator</p>
+                            </div>
+                            <div class="tool">
+                                <img src="./img/PS.svg" alt="Adobe Photoshop">
+                                <p>Adobe Photoshop</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square-ornament-absolute">
+                        <div class="square-ornament-relative">
+                            <div class="square-ornament-relative SOR-small"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="short-contact">
+            <div class="sc-border-top"></div>
+            <h3>Masz pytania?</h3>
+            <h4>Zadzwoń lub napisz!</h4>
+            <div class="sc-call-mail">
+                <div class="sc-call">
+                    <img src="./img/phone-unfilled.svg" alt="Zadzwoń">
+                    <a href="">+48 694 358 660</a>
+                </div>
+                <div class="sc-mail">
+                    <img src="./img/message-unfilled.svg" alt="Napisz">
+                    <a href="">patrykjary.kontakt@gmail.com</a>
+                </div>
+            </div>
+            <div class="sc-border-bottom"></div>
+        </div>
 
-        <div class="short-contact"></div>
+        <div class="realization">
+            <h2 class="tittle-of-section">Realizacje</h2>
+            <div class="realization-content">
+                <div class="project">
+                    <div class="project-info"></div>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
