--- a/index.html
+++ b/index.html
@@ -214,7 +214,10 @@
             <h2 class="tittle-of-section">Realizacje</h2>
             <div class="realization-content">
                 <div class="project">
-                    <div class="project-info"></div>
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                    </div>
                 </div>
             </div>
         </div>
