--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@
                 </div>
                 <div class="project">
                     <div class="project-info">
-                        <p>does the recruiter see it?</p>
+                        <p>Bounne</p>
                         <p>Salon Fryzjerski</p>
                     </div>
                 </div>
                 <div class="project">
-                <div class="project-info">
-                     <p>does the recruiter see it?</p>
-                     <p>Salon Fryzjerski</p>
-                 </div>
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                    </div>
                 </div>
             </div>
         </div>
