--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
                         <p>Salon Fryzjerski</p>
                     </div>
                 </div>
+                <div class="project">
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
