--- a/index.html
+++ b/index.html
@@ -218,11 +218,6 @@
                         <p>Bounne</p>
                         <p>Salon Fryzjerski</p>
                     </div>
-                <div class="project">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
-                    </div>
                 </div>
                 <div class="project">
                     <div class="project-info">
@@ -236,12 +231,16 @@
                         <p>Salon Fryzjerski</p>
                     </div>
                 </div>
-                <div class="project">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
+            </div>
+            <div class="more-realization">
+                <a href="#">
+                    <div class="more-realization-content">
+                        <p>Więcej realizacji</p>
+                        <div class="icon">
+                            <p>i</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
