--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
                         <p>Salon Fryzjerski</p>
                     </div>
                 </div>
+								<div class="project">
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                    </div>
+                </div>
             </div>
             <div class="more-realization">
                 <a href="#">
