--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                         <p>Salon Fryzjerski</p>
                     </div>
                 </div>
+								<div class="project">
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                    </div>
+                </div>
                 
 								<div class="project">
                     <div class="project-info">
