--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
                         <p>Salon Fryzjerski</p>
                     </div>
                 </div>
+
+								<div class="project">
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                    </div>
+                </div>
 				<div class="project">
                     <div class="project-info">
                         <p>Bounne</p>
