--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link rel="icon" href="./img/logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./style.css">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./icofont/icofont.min.css">
 </head>
 <body>
     <div class="content">
@@ -214,49 +215,40 @@
             <h2 class="tittle-of-section">Realizacje</h2>
             <div class="realization-content">
                 <div class="project">
+                    <img src="./img/Bounne.png" alt="Bounne">
                     <div class="project-info">
                         <p>Bounne</p>
                         <p>Salon Fryzjerski</p>
+                        <a href="">
+                            <p>Przejdź</p>
+                            <i class="icofont-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="project">
+                    <img src="./img/Vegsec.png" alt="VegSec">
                     <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
+                        <p>VegSec</p>
+                        <p>Kamery</p>
+                        <a href="">
+                            <p>Przejdź</p>
+                            <i class="icofont-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
 				<div class="project">
+                    <img src="./img/2020.png" alt="2020 Salon Fryzjerski">
                     <div class="project-info">
-                        <p>Bounne</p>
+                        <p>2020</p>
                         <p>Salon Fryzjerski</p>
+                        <a href="">
+                            <p>Przejdź</p>
+                            <i class="icofont-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
                 
-				<div class="project">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
-                    </div>
-                </div>
-								<div class="project">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
-                    </div>
-                </div>
-
-								<div class="project">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
-                    </div>
-                </div>
-				<div class="project">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
-                    </div>
-                </div>
+				
             </div>
             <div class="more-realization">
                 <a href="#">
