--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
 
         <div class="realization">
-            <h2 class="tittle-of-section">Realizacje</h2>
+            <h2 class="tittle-of-section">Wybrane Realizacje</h2>
             <div class="realization-content">
                 <div class="project">
                     <img src="./img/Bounne.png" alt="Bounne">
@@ -228,8 +228,8 @@
                 <div class="project">
                     <img src="./img/Vegsec.png" alt="VegSec">
                     <div class="project-info">
-                        <p>VegSec</p>
-                        <p>Kamery</p>
+                        <p>Vegsec</p>
+                        <p>System Monitoringu</p>
                         <a href="">
                             <p>Przejdź</p>
                             <i class="icofont-arrow-right"></i>
@@ -251,14 +251,41 @@
 				
             </div>
             <div class="more-realization">
-                <a href="#">
-                    <div class="more-realization-content">
+                <a href="#" class="more-realization-content">
                         <p>Więcej realizacji</p>
                         <div class="icon">
-                            <p>i</p>
+                            <i class="icofont-arrow-right"></i>
+                        </div>
+                </a>
+            </div>
+        </div>
+        <div class="faq-section">
+            <h2 class="tittle-of-section">Często zadawaane pytania</h2>
+            <div class="faq-content">
+
+                <div class="faq-about">
+                    <div class="faq-about-content">
+                        <p>O usługach projektowania i programowania stron internetowych</p>
+                    </div>
+                    <a href="">Napisz do mnie</a>
+                </div>
+
+                <div class="faq-qa">
+                    <div class="qa">
+                        <div class="qa-question">
+                            <div class="qa-title">Ile kosztuje strona internetowa?</div>
+                            <div class="qa-icon">
+                                <div class="qa-icon-plus"></div>
+                                <div class="qa-icon-minus"></div>
+                            </div>
+                        </div>
+
+                        <div class="qa-answer">
+                            Responsywne strony www są podstawą nowoczesnych procesów projektowania i tworzenia stron internetowych. Zapewniam, że Twoja witryna będzie kompatybilna na wszystkich urządzeniach (mobilnych, tabletach i komputerach stacjonarnych). Co więcej kompatybilność tworzy płynny projekt strony internetowej, aby zapewnić użytkownikom witryny najlepsze wrażenia podczas przeglądania. Ponieważ coraz więcej osób używa smartfonów do przeglądania stron internetowych, dlatego ważne jest, abyś nie odstraszał potencjalnych klientów i robił jak najlepsze pierwsze wrażenie.
                         </div>
                     </div>
-                </a>
+                </div>
+
             </div>
         </div>
     </div>
