--- a/index.html
+++ b/index.html
@@ -284,10 +284,97 @@
                             Responsywne strony www są podstawą nowoczesnych procesów projektowania i tworzenia stron internetowych. Zapewniam, że Twoja witryna będzie kompatybilna na wszystkich urządzeniach (mobilnych, tabletach i komputerach stacjonarnych). Co więcej kompatybilność tworzy płynny projekt strony internetowej, aby zapewnić użytkownikom witryny najlepsze wrażenia podczas przeglądania. Ponieważ coraz więcej osób używa smartfonów do przeglądania stron internetowych, dlatego ważne jest, abyś nie odstraszał potencjalnych klientów i robił jak najlepsze pierwsze wrażenie.
                         </div>
                     </div>
-                </div>
+                    <div class="qa">
+                        <div class="qa-question">
+                            <div class="qa-title">Ile czasu trwa stworzenie strony internetowej?</div>
+                            <div class="qa-icon">
+                                <div class="qa-icon-plus"></div>
+                                <div class="qa-icon-minus"></div>
+                            </div>
+                        </div>
 
+                        <div class="qa-answer">
+                            Tyle ile trzeba
+                        </div>
+                    </div>
+                    <div class="qa">
+                        <div class="qa-question">
+                            <div class="qa-title">Czym jest responsywne projektowanie stron internetowych?</div>
+                            <div class="qa-icon">
+                                <div class="qa-icon-plus"></div>
+                                <div class="qa-icon-minus"></div>
+                            </div>
+                        </div>
+
+                        <div class="qa-answer">
+                            RWD
+                        </div>
+                    </div>
+                    <div class="qa">
+                        <div class="qa-question">
+                            <div class="qa-title">Czym zajmuje sie web developer?</div>
+                            <div class="qa-icon">
+                                <div class="qa-icon-plus"></div>
+                                <div class="qa-icon-minus"></div>
+                            </div>
+                        </div>
+
+                        <div class="qa-answer">
+                            Tworzeniem stron internetowych
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="contact-front-section">
+            <h2 class="tittle-of-section">Skontaktujmy się!</h2>
+            <div class="possibility-of-contacts">
+                <div class="all-types-contacts">
+                    <div class="possibility-contact">
+                        <h6>Wszystkie możliwości kontaktu</h6>
+                        <div class="ornament-div-contact"></div>
+                    </div>
+                    <div class="type-of-contact">
+                        <a href="">+48 694 358 660</a>
+                        <i class="icofont-phone"></i>
+                    </div>
+                    <div class="type-of-contact">
+                        <a href="">patrykjary.kontakt@gmail.com</a>
+                        <i class="icofont-ui-message"></i>
+                    </div>
+                    <div class="type-of-contact">
+                        <a href="">Messenger</a>
+                        <i class="icofont-facebook-messenger"></i>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <div class="possibility-contact">
+                        <h6>Formularz kontaktowy</h6>
+                        <div class="ornament-div-contact"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-content">
+                <img src="./img/logo.svg" alt="Logo">
+                <h3>Patryk Jary</h3>
+                <h2>Programista | Web Developer
+                    <br>
+                    Freelancer
+                </h2>
+                <p>Tworzenie stron internetowych bez korzystania z szablonów, indywidualne podejście do każdego projektu, Poprawianie widoczności stron w wyszukiwarce.
+                </p>
+                <div class="footer-nav">
+                    <a class="active" href="">Strona główna</a>
+                    <a href="">O mnie</a>
+                    <a href="">Realizacje</a>
+                    <a href="">Kontakt</a>
+                </div>
+                <a class="policy"href="">Polityka prywatności</a>
+                <p class="rights">© 2023. All Rights Reserved.</p>
+            </div>
+        </footer>
     </div>
     
 </body>
