--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
                                 <img src="./img/PS.svg" alt="Adobe Photoshop">
                                 <p>Adobe Photoshop</p>
                             </div>
+                            <div class="tool">
+                                <img src="./img/PS.svg" alt="Adobe Photoshop">
+                                <p>Adobe Photoshop</p>
+                            </div>
                         </div>
                     </div>
                     <div class="square-ornament-absolute">
@@ -247,18 +251,6 @@
                         </a>
                     </div>
                 </div>
-				<div class="project">
-                    <img src="./img/2020.png" alt="2020 Salon Fryzjerski">
-                    <div class="project-info">
-                        <p>2020</p>
-                        <p>Salon Fryzjerski</p>
-                        <a href="">
-                            <p>Przejdź</p>
-                            <i class="icofont-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                
 				
             </div>
             <div class="more-realization">
