--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
                             <i class="icofont-arrow-right"></i>
                         </a>
                     </div>
+                </div><div class="project">
+                    <img src="./img/Vegsec.png" alt="VegSec">
+                    <div class="project-info">
+                        <p>Vegsec</p>
+                        <p>System Monitoringu</p>
+                        <a href="">
+                            <p>Przejdź</p>
+                            <i class="icofont-arrow-right"></i>
+                        </a>
+                    </div>
                 </div>
 				<div class="project">
                     <img src="./img/2020.png" alt="2020 Salon Fryzjerski">
@@ -270,7 +280,9 @@
                     <div class="faq-about-content">
                         <p>O usługach projektowania i programowania stron internetowych</p>
                     </div>
-                    <a href="">Napisz do mnie</a>
+                    <div class="faq-about-a">
+                        <a href="">Napisz do mnie</a>
+                    </div>
                 </div>
 
                 <div class="faq-qa">
