--- a/index.html
+++ b/index.html
@@ -239,16 +239,6 @@
                             <i class="icofont-arrow-right"></i>
                         </a>
                     </div>
-                </div><div class="project">
-                    <img src="./img/Vegsec.png" alt="VegSec">
-                    <div class="project-info">
-                        <p>Vegsec</p>
-                        <p>System Monitoringu</p>
-                        <a href="">
-                            <p>Przejdź</p>
-                            <i class="icofont-arrow-right"></i>
-                        </a>
-                    </div>
                 </div>
 				<div class="project">
                     <img src="./img/2020.png" alt="2020 Salon Fryzjerski">
@@ -265,10 +255,10 @@
             </div>
             <div class="more-realization">
                 <a href="#" class="more-realization-content">
-                        <p>Więcej realizacji</p>
-                        <div class="icon">
-                            <i class="icofont-arrow-right"></i>
-                        </div>
+                    <p>Więcej realizacji</p>
+                    <div class="icon">
+                        <i class="icofont-arrow-right"></i>
+                    </div>
                 </a>
             </div>
         </div>
@@ -423,6 +413,9 @@
                 <p class="rights">© 2023. All Rights Reserved.</p>
             </div>
         </footer>
+    </div>
+    <div class="navigation-mobile">
+        
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js" integrity="sha512-qF6akR/fsZAB4Co1QDDnUXWnaQseLGXoniuSuSlPQK6+aWhlMZcHzkasCSlnWoe+TJuudlka1/IQ01Dnhgq95g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
