--- a/index.html
+++ b/index.html
@@ -414,7 +414,35 @@
             </div>
         </footer>
     </div>
+
     <div class="navigation-mobile">
+        <div class="navigation-mobile-content-rel">
+            <div class="navigation-mobile-icons"></div>
+
+            <div class="navigation-mobile-content">
+                <div class="navigation-mobile-anchors">
+                    <div class="test">
+                        <div class="mobile-anchor">
+                            <div class="mobile-orna-wall wall-active"></div>
+                            <a href="">Home</a>
+                        </div>
+                        <div class="mobile-anchor">
+                            <div class="mobile-orna-wall"></div>
+                            <a href="">O mnie</a>
+                        </div>
+                        <div class="mobile-anchor">
+                            <div class="mobile-orna-wall"></div>
+                            <a href="">Realizacje</a>
+                        </div>
+                        <div class="mobile-anchor">
+                            <div class="mobile-orna-wall"></div>
+                            <a href="">Kontant</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="navigation-mobile-socials"></div>
+            </div>
+        </div>
         
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js" integrity="sha512-qF6akR/fsZAB4Co1QDDnUXWnaQseLGXoniuSuSlPQK6+aWhlMZcHzkasCSlnWoe+TJuudlka1/IQ01Dnhgq95g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
