--- a/index.html
+++ b/index.html
@@ -230,6 +230,17 @@
                     </div>
                 </div>
                 <div class="project">
+                    <img src="./img/Bounne.png" alt="Bounne">
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                        <a href="">
+                            <p>Przejdź</p>
+                            <i class="icofont-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="project">
                     <img src="./img/Vegsec.png" alt="VegSec">
                     <div class="project-info">
                         <p>Vegsec</p>
