--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
                             <i class="icofont-arrow-right"></i>
                         </a>
                     </div>
+                </div><div class="project">
+                    <img src="./img/Vegsec.png" alt="VegSec">
+                    <div class="project-info">
+                        <p>Vegsec</p>
+                        <p>System Monitoringu</p>
+                        <a href="">
+                            <p>Przejdź</p>
+                            <i class="icofont-arrow-right"></i>
+                        </a>
+                    </div>
                 </div>
 				<div class="project">
                     <img src="./img/2020.png" alt="2020 Salon Fryzjerski">
