--- a/index.html
+++ b/index.html
@@ -239,6 +239,16 @@
                             <i class="icofont-arrow-right"></i>
                         </a>
                     </div>
+                </div><div class="project">
+                    <img src="./img/Bounne.png" alt="Bounne">
+                    <div class="project-info">
+                        <p>Bounne</p>
+                        <p>Salon Fryzjerski</p>
+                        <a href="">
+                            <p>Przejdź</p>
+                            <i class="icofont-arrow-right"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="project">
                     <img src="./img/Vegsec.png" alt="VegSec">
