--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h2>No hej, Jestem Patryk</h2>
                     </div>
                     <div class="header-text2">
-                        <h1>Freelance UI Designer Web Developer</h1>
+                        <h1>Freelance UI Designer <br> Web Developer</h1>
                     </div>
                     <div class="header-text3">
                         <p>Pomagam rozwijać się firmom poprzez projektowanie oraz tworzenie stron internetowych. Jeśli więc szukasz programisty który miałby stworzyć okno na twój biznes w internecie, zapraszam do zapoznania sie z ofertą.</p>
@@ -230,27 +230,6 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="./img/Bounne.png" alt="Bounne">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
-                        <a href="">
-                            <p>Przejdź</p>
-                            <i class="icofont-arrow-right"></i>
-                        </a>
-                    </div>
-                </div><div class="project">
-                    <img src="./img/Bounne.png" alt="Bounne">
-                    <div class="project-info">
-                        <p>Bounne</p>
-                        <p>Salon Fryzjerski</p>
-                        <a href="">
-                            <p>Przejdź</p>
-                            <i class="icofont-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="project">
                     <img src="./img/Vegsec.png" alt="VegSec">
                     <div class="project-info">
                         <p>Vegsec</p>
@@ -396,7 +375,7 @@
                         </div>
                         <label for="zgoda">
                             <input type="checkbox" id="zgoda" name="zgoda">
-                             Wyrażam zgodę na przetwarzanie administratora strony (Patryk Jary) moich danych osobowych, zawartych w formularzu kontaktowym, w celu udzielenia odpowiedzi na przesłane przeze mnie zapytanie.
+                            Wyrażam zgodę na przetwarzanie administratora strony (Patryk Jary) moich danych osobowych, zawartych w formularzu kontaktowym, w celu udzielenia odpowiedzi na przesłane przeze mnie zapytanie.
                         </label>
                     </form>
                 </div>
@@ -438,25 +417,28 @@
 
     <div class="navigation-mobile">
         <div class="navigation-mobile-content-rel">
-            <div class="navigation-mobile-icons"></div>
+            <div class="navigation-mobile-icons">
+                <div class="navigation-btn nav-active">
+                    <img src="./img/navigation.svg" alt="Nawigacja">
+                </div>
+                <div class="close-btn nav-active">
+                    <img src="./img/close.svg" alt="'X'">
+                </div>
+            </div>
 
-            <div class="navigation-mobile-content">
+            <div class="navigation-mobile-content active">
                 <div class="navigation-mobile-anchors">
                     <div class="test">
-                        <div class="mobile-anchor">
-                            <div class="mobile-orna-wall wall-active"></div>
+                        <div class="mobile-anchor active-anchor">
                             <a href="">Home</a>
                         </div>
-                        <div class="mobile-anchor">
-                            <div class="mobile-orna-wall"></div>
+                        <div class="mobile-anchor ">
                             <a href="">O mnie</a>
                         </div>
-                        <div class="mobile-anchor">
-                            <div class="mobile-orna-wall"></div>
+                        <div class="mobile-anchor ">
                             <a href="">Realizacje</a>
                         </div>
                         <div class="mobile-anchor">
-                            <div class="mobile-orna-wall"></div>
                             <a href="">Kontant</a>
                         </div>
                     </div>
